[package]
name = "bdk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.122"
bip39 = "1.0.1"
rand = "0.6.0"
bitcoin = "0.27.1"
secp256k1 = {version = "0.20.1", features = ["rand"]}
base64 = "0.13.0"
bdk = {version = "0.12.0", features = ["compiler", "rpc", "electrum"]}
